--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,11 @@
 
 {% block title %}迅影{% endblock %}
 
+{% block head %}
+{{ super() }}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/rating.css') }}">
+{% endblock %}
+
 {% block page_content %}
 <div class="page-header">
     <h1>你好，{% if current_user.is_authenticated %}{{ current_user.username }}{% else %}游客{% endif %}!</h1>
@@ -9,5 +14,14 @@
 <div class="col-md-12">
     <p>欢迎来到<b>迅影</b>。</p>
     <p>卖影碟啦，三元一张，十元三张！</p>
+</div>
+<div class="col-md-2">
+    <div class="rating">
+        <span>☆</span>
+        <span>☆</span>
+        <span>☆</span>
+        <span>☆</span>
+        <span>☆</span>
+    </div>
 </div>
 {% endblock %}
