--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,8 +9,13 @@
 {% endblock %}
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+<link href="{{ url_for('static', filename='css/star-rating.min.css') }}" media="all" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}">
+
+<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="{{ url_for('static', filename='js/star-rating.min.js') }}" type="text/javascript"></script>
 {% endblock %}
+
 
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
@@ -79,7 +84,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container", id="main">
+<div class="container"  id="main">
     {% for message in get_flashed_messages() %}
     <div class="alert alert-warning">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
