--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,8 @@
 {% block head %}
 {{ super() }}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/rating.css') }}">
+<script src="{{ url_for('static', filename='js/rating.js') }}" type="text/javascript"></script>
+
 {% endblock %}
 
 {% block page_content %}
@@ -15,13 +17,5 @@
     <p>欢迎来到<b>迅影</b>。</p>
     <p>卖影碟啦，三元一张，十元三张！</p>
 </div>
-<div class="col-md-2">
-    <div class="rating">
-        <span>☆</span>
-        <span>☆</span>
-        <span>☆</span>
-        <span>☆</span>
-        <span>☆</span>
-    </div>
-</div>
+<input id="input-id" type="text" class="rating" data-size="xs" >
 {% endblock %}
