--- a/app/templates/subject/movie.html
+++ b/app/templates/subject/movie.html
@@ -3,7 +3,9 @@
 {% block head %}
 {{ super() }}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/movie.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/star-rating.min.css') }}" media="all"/>
 {% endblock %}
+
 {% block title %}{{ movie.name }}{% endblock %}
 
 {% block page_content %}
@@ -18,6 +20,11 @@
         {% else %}
         <img class="img-rounded" src="{{ url_for('static', filename='movie.png') }}" width="100%"/>
         {% endif %}
+        <form method="post">
+            <input id="rating" name="rating" required class="rating-loading"><br>
+            <button type="submit" class="btn btn-primary">Submit</button>&nbsp;
+            <button type="reset" class="btn btn-default">Reset</button>
+        </form>
     </div>
     <div class="col-md-8">
         <p><b>名称：</b>{{ movie.name }}</p>
@@ -70,7 +77,12 @@
         </div>
     </div>
     {% endif %}
-
 </div>
+{% endblock %}
 
+{% block scripts %}
+{{ super() }}
+<script src="{{ url_for('static', filename='js/jquery.min.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='js/star-rating.min.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='js/rating.js') }}" type="text/javascript"></script>
 {% endblock %}
