--- a/app/templates/subject/movie.html
+++ b/app/templates/subject/movie.html
@@ -14,27 +14,29 @@
 </div>
 
 <div class="box">
-    <div class="col-md-4">
-        {% if movie.picture %}
-        <img class="img-rounded" src="data:;base64,{{ base64.b64encode(movie.picture).decode('ascii') }}" width="100%"/>
-        {% else %}
-        <img class="img-rounded" src="{{ url_for('static', filename='movie.png') }}" width="100%"/>
-        {% endif %}
-        <form method="post">
-            <input id="rating" name="rating" required class="rating-loading"><br>
-            <button type="submit" class="btn btn-primary">Submit</button>&nbsp;
-            <button type="reset" class="btn btn-default">Reset</button>
-        </form>
-    </div>
-    <div class="col-md-8">
-        <p><b>名称：</b>{{ movie.name }}</p>
-        <p><b>上映日期：</b>{{ movie.date }}</p>
-        <p><b>价格：</b>{{ movie.price }}</p>
-        <p><b>导演：</b>{{ movie.director }}</p>
-        <b>简介：</b>
-        <p><textarea class="text-info" readonly
-                     style="width:100%;height:150px; border:none; outline:none; cursor:default;">{{ movie.description }}</textarea>
-        </p>
+    <div class="row">
+        <div class="col-md-4">
+            {% if movie.picture %}
+            <img class="img-rounded" src="data:;base64,{{ base64.b64encode(movie.picture).decode('ascii') }}" width="100%"/>
+            {% else %}
+            <img class="img-rounded" src="{{ url_for('static', filename='movie.png') }}" width="100%"/>
+            {% endif %}
+            <form method="post">
+                <input id="rating" name="rating" required class="rating-loading" data-size="sm"><br>
+                <button type="submit" class="btn btn-primary">评分</button>&nbsp;
+                <button type="reset" class="btn btn-default">取消</button>
+            </form>
+        </div>
+        <div class="col-md-8">
+            <p><b>名称：</b>{{ movie.name }}</p>
+            <p><b>上映日期：</b>{{ movie.date }}</p>
+            <p><b>价格：</b>{{ movie.price }}</p>
+            <p><b>导演：</b>{{ movie.director }}</p>
+            <b>简介：</b>
+            <p><textarea class="text-info" readonly
+                         style="width:100%;height:150px; border:none; outline:none; cursor:default;">{{ movie.description }}</textarea>
+            </p>
+        </div>
     </div>
     <div style="text-align:center;">
         <button class="btn btn-success" style="margin:0 auto;" onclick= "javascript:window.location.href='{{ url_for('subject.buy', id=movie.id) }}';">购买</button>
