--- a/app/templates/subject/commodity.html
+++ b/app/templates/subject/commodity.html
@@ -35,5 +35,8 @@
         {{ wtf.quick_form(form) }}
     </div>
 </div>
-
+<form action="{{ url_for('subject.buy', id=voucher.movie.id) }}" method="POST">
+    <input type="text" name="money">
+    <input type="submit" value="去支付" />
+</form>
 {% endblock %}
