--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}">
+<script type="text/javascript" src="js/trolley.js"></script>
 {% endblock %}
 
 
@@ -57,6 +58,16 @@
                         {{ current_user.username }} <b class="caret"></b>
                         {% endif %}
                     </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <button onclick="newItem()">Click Me</button>
+                        </li>
+                        <li>
+                            <table id="trolley">
+
+                            </table>
+                        </li>
+                    </ul>
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('user.profile', username=current_user.username) }}">个人资料</a></li>
                         <li><a href="{{ url_for('user.edit_profile', username=current_user.username) }}">编辑资料</a></li>
